displaying some data

--- a/templates/questions.html
+++ b/templates/questions.html
@@ -18,7 +18,7 @@
             	<h2>Gender</h2>
 				<div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="male" class="mdc-checkbox__native-control" type="checkbox">
+	                <input id="male" class="mdc-checkbox__native-control" type="checkbox" checked>
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -31,7 +31,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="female" class="mdc-checkbox__native-control" type="checkbox">
+	                <input id="female" class="mdc-checkbox__native-control" type="checkbox" checked>
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -44,7 +44,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="other" class="mdc-checkbox__native-control" type="checkbox">
+	                <input id="other" class="mdc-checkbox__native-control" type="checkbox" checked>
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -59,7 +59,7 @@
             	<h2>Race</h2>
 				<div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="white" class="mdc-checkbox__native-control" type="checkbox">
+	                <input id="white" class="mdc-checkbox__native-control" type="checkbox" checked>
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -72,7 +72,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="black" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="black" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -85,7 +85,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="indian" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="indian" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -98,7 +98,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="hispanic" class="mdc-checkbox__native-control" type="checkbox">
+	                <input  checked id="hispanic" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -111,7 +111,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="pacific" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="pacific" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -124,7 +124,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="other" class="mdc-checkbox__native-control" type="checkbox">
+	                <input  checked id="other" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -139,7 +139,7 @@
             	<h2>Religion</h2>
 				<div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="christian" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="christian" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -152,7 +152,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="muslim" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="muslim" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -165,7 +165,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="jewish" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="jewish" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -178,7 +178,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="nonreligious" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="nonreligious" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -191,7 +191,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="buddhist" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="buddhist" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -204,20 +204,20 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="hindu" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="hindu" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
 	                  </svg>
 	                  <div class="mdc-checkbox__mixedmark"></div>
-	                </div>
+	                </div> 
 	              </div>
 	              <label for="basic-custom-checkbox-stroke-and-fill">Hinduism</label>
 	            </div>
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="other" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="other" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -232,7 +232,7 @@
             	<h2>Country</h2>
 				<div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="us" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="us" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -245,7 +245,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="uk" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="uk" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -258,7 +258,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="fr" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="fr" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -271,7 +271,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="ca" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="ca" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -284,7 +284,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="mx" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="mx" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -297,7 +297,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="ru" class="mdc-checkbox__native-control" type="checkbox">
+	                <input checked id="ru" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -314,13 +314,16 @@
                 <label for="age_min" class="mdc-text-field__label">Min Age</label>
               </div>
               <br>
-              <div class="mdc-text-field" data-mdc-auto-init="MDCTextField" style="width: 40%;">
+              <div class="dmc-text-field" data-mdc-auto-init="MDCTextField" style="width: 40%;">
                 <input type="text" class="mdc-text-field__input" id="age_max">
                 <label for="age_max" class="mdc-text-field__label">Max Age</label>
               </div>
 	        </div>
             </section>
             </form>
+            <div style="width: 50%; height:20%;">
+            	<canvas id="chart" width="100" height="100" responsive></canvas>
+       		</div>
             <footer class="mdc-dialog__footer">
               <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Cancel</button>
             </footer>
