--- a/templates/app.html
+++ b/templates/app.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/questions.css">
 	<link rel="stylesheet" type = "text/css" href="../css/loaders.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
 </head>
 <body>
 <div id="overlay">
