--- a/templates/questions.html
+++ b/templates/questions.html
@@ -308,13 +308,13 @@
 	              <label for="basic-custom-checkbox-stroke-and-fill">Russia</label>
 	            </div>	            	            	            
 	        </div>
-	        <div id="birthday-filter" style="float:left; margin-left: 1%;">
-	          <div class="mdc-text-field" data-mdc-auto-init="MDCTextField" style="width: 40%;">
+	        <div id="birthday-filter" style="float:left; margin-left: 5%; width:15%;" >
+	        <h2>Age</h2>
+	          <div class="mdc-text-field" data-mdc-auto-init="MDCTextField" style="width: 45%;">
                 <input type="text" class="mdc-text-field__input" id="age_min">
                 <label for="age_min" class="mdc-text-field__label">Min Age</label>
               </div>
-              <br>
-              <div class="dmc-text-field" data-mdc-auto-init="MDCTextField" style="width: 40%;">
+              <div class="dmc-text-field" data-mdc-auto-init="MDCTextField" style="width: 45%;">
                 <input type="text" class="mdc-text-field__input" id="age_max">
                 <label for="age_max" class="mdc-text-field__label">Max Age</label>
               </div>
