changed colors of checkboxes

--- a/css/questions.css
+++ b/css/questions.css
@@ -8,6 +8,28 @@
 	background-color: white;
 }
 
+#gender-filter .mdc-checkbox__background {
+	background-color: #B00000;
+	border-color: #B00000;
+}
+#gender-filter .mdc-checkbox::before, .mdc-checkbox::after {
+	background-color: pink;
+}
+
+#religion-filter .mdc-checkbox__background {
+	background-color: blue;
+	border-color: blue;
+}
+#religion-filter .mdc-checkbox::before, .mdc-checkbox::after {
+	background-color: lightblue;
+}
+#race-filter .mdc-checkbox__background {
+	background-color: green;
+	border-color: green;
+}
+#race-filter .mdc-checkbox::before, .mdc-checkbox::after {
+	background-color: lightgreen;
+}
 #results-dialog h2 {
 	font-size: 10px;
 	text-align: center;
