added view endpoint

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,10 @@
                 Ask a Question
               </h2>
             </header>
+            <div style="margin:auto; text-align: center;" id="buy-points">
+              <h4>Buy More?</h4>
+              <button class="mdc-button mdc-button--raised mdc-ripple-upgraded">$$ Give Us Money $$</button>
+            </div>
             <form id="ask-form">
             <section id="ask-description" class="mdc-dialog__body">
               <div class="mdc-text-field" data-mdc-auto-init="MDCTextField">
