--- a/templates/questions.html
+++ b/templates/questions.html
@@ -321,7 +321,7 @@
 	        </div>
             </section>
             </form>
-            <div style="width: 30%; height:20%;">
+            <div id="canvas-container" style="width: 30%; height:20%;">
             	<canvas id="chart" width="100" height="100" responsive></canvas>
        		</div>
             <footer class="mdc-dialog__footer">
