--- a/css/questions.css
+++ b/css/questions.css
@@ -1,3 +1,22 @@
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    margin-left: 3%;
+    margin-top: 5%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+    text-align: center;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
 .filter-bar {
 	width: 81%;
 	height: 40px;
