--- a/templates/questions.html
+++ b/templates/questions.html
@@ -321,9 +321,19 @@
 	        </div>
             </section>
             </form>
-            <div id="canvas-container" style="width: 30%; height:20%;">
-            	<canvas id="chart" width="100" height="100" responsive></canvas>
+            <div>
+            	<div id="canvas-container" style="width: 30%; height:20%; float: left; display: inline-block;">
+            		<canvas id="chart" width="100" height="100" responsive></canvas>
+            	</div>
+            	<table id="results-table" style="width:50%;">
+				  <tr>
+				    <th>Answer</th>
+				    <th>Count</th>
+				    <th>Percentage</th>
+				  </tr>
+				</table>
        		</div>
+
             <footer class="mdc-dialog__footer">
               <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Cancel</button>
             </footer>
