--- a/templates/questions.html
+++ b/templates/questions.html
@@ -310,19 +310,21 @@
 	        </div>
 	        <div id="birthday-filter" style="float:left; margin-left: 5%; width:15%;" >
 	        <h2>Age</h2>
-	          <div class="mdc-text-field" data-mdc-auto-init="MDCTextField" style="width: 45%;">
-                <input type="text" class="mdc-text-field__input" id="age_min">
-                <label for="age_min" class="mdc-text-field__label">Min Age</label>
-              </div>
-              <div class="dmc-text-field" data-mdc-auto-init="MDCTextField" style="width: 45%;">
-                <input type="text" class="mdc-text-field__input" id="age_max">
-                <label for="age_max" class="mdc-text-field__label">Max Age</label>
-              </div>
+	        	<div id="birthday-filters">
+		          <div class="mdc-text-field" data-mdc-auto-init="MDCTextField" style="width: 45%;">
+	                <input type="text" class="mdc-text-field__input" id="age_min">
+	                <label for="age_min" class="mdc-text-field__label">Min</label>
+	              </div>
+	              <div class="dmc-text-field" data-mdc-auto-init="MDCTextField" style="width: 45%;">
+	                <input type="text" class="mdc-text-field__input" id="age_max">
+	                <label for="age_max" class="mdc-text-field__label">Max</label>
+	              </div>
+          		</div>
 	        </div>
             </section>
             </form>
             <div>
-            	<div id="canvas-container" style="width: 30%; height:20%; float: left; display: inline-block;">
+            	<div id="canvas-container" style="width: 30%; height:20%; float: left; display: inline-block;  margin-right:10%;">
             		<canvas id="chart" width="100" height="100" responsive></canvas>
             	</div>
             	<table id="results-table" style="width:50%;">
@@ -335,7 +337,7 @@
        		</div>
 
             <footer class="mdc-dialog__footer">
-              <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Cancel</button>
+              <button type="button" id="exit-results" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Exit</button>
             </footer>
           </div>
       </aside>
