--- a/templates/questions.html
+++ b/templates/questions.html
@@ -324,9 +324,10 @@
             </section>
             </form>
             <div>
-            	<div id="canvas-container" style="width: 30%; height:20%; float: left; display: inline-block;  margin-right:10%;">
-            		<canvas id="chart" width="100" height="100" responsive></canvas>
-            	</div>
+
+            		<div id="canvas-container" style="width: 30%; height: 230px; float: left; display: inline-block;  margin-right:10%;">
+            			<canvas id="chart" width="100" height="100" responsive></canvas>
+            		</div>
             	<table id="results-table" style="width:50%;">
 				  <tr>
 				    <th>Answer</th>
