--- a/templates/questions.html
+++ b/templates/questions.html
@@ -231,7 +231,7 @@
 	        <div id="country-filter" style="float:left">
             	<h2>Country</h2>
 				<div class="mdc-form-field">
-	              <div class="mdc-checkbox">
+	              <div class="mdc-checkbox country-checkbox--custom-stroke-and-fill">
 	                <input checked id="us" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
