--- a/templates/home.html
+++ b/templates/home.html
@@ -104,4 +104,341 @@
 
   </div>
 </div>
+<aside class="mdc-dialog" id="results-home-dialog">
+          <div class="mdc-dialog__surface">
+            <header class="mdc-dialog__header">
+              <h3 id="results-header" class="mdc-dialog__header__title">
+                Results
+              </h3>
+            </header>
+            <form id="filter-form">
+            <section id="filter-results" class="mdc-dialog__body">
+            <div id="gender-filter" style="float:left">
+              <h2>Gender</h2>
+        <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input id="male" class="mdc-checkbox__native-control" type="checkbox" checked>
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Male</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input id="female" class="mdc-checkbox__native-control" type="checkbox" checked>
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Female</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input id="other" class="mdc-checkbox__native-control" type="checkbox" checked>
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Other</label>
+              </div>
+          </div>
+          <div id="race-filter" style="float:left">
+              <h2>Race</h2>
+        <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input id="white" class="mdc-checkbox__native-control" type="checkbox" checked>
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">White</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="black" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">African American</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="indian" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">American Indian</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input  checked id="hispanic" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Hispanic</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="pacific" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Pacific Islander</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input  checked id="other" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Other</label>
+              </div>                              
+          </div>
+          <div id="religion-filter" style="float:left">
+              <h2>Religion</h2>
+        <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="christian" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Christianity</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="muslim" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Islam</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="jewish" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Judiasm</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="nonreligious" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Nonreligious</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="buddhist" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Buddhism</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="hindu" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div> 
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Hinduism</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="other" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Other</label>
+              </div>
+          </div>
+          <div id="country-filter" style="float:left">
+              <h2>Country</h2>
+        <div class="mdc-form-field">
+                <div class="mdc-checkbox country-checkbox--custom-stroke-and-fill">
+                  <input checked id="us" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">United States</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="uk" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">United Kingdom</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="fr" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">France</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="ca" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Canada</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="mx" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Mexico</label>
+              </div>
+              <br>
+              <div class="mdc-form-field">
+                <div class="mdc-checkbox">
+                  <input checked id="ru" class="mdc-checkbox__native-control" type="checkbox">
+                  <div class="mdc-checkbox__background">
+                    <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                      <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                    </svg>
+                    <div class="mdc-checkbox__mixedmark"></div>
+                  </div>
+                </div>
+                <label for="basic-custom-checkbox-stroke-and-fill">Russia</label>
+              </div>                                          
+          </div>
+          <div id="birthday-filter" style="float:left; margin-left: 5%; width:15%;" >
+          <h2>Age</h2>
+            <div id="birthday-filters">
+              <div class="mdc-text-field" data-mdc-auto-init="MDCTextField" style="width: 45%;">
+                  <input type="text" class="mdc-text-field__input" id="age_min">
+                  <label for="age_min" class="mdc-text-field__label">Min</label>
+                </div>
+                <div class="dmc-text-field" data-mdc-auto-init="MDCTextField" style="width: 45%;">
+                  <input type="text" class="mdc-text-field__input" id="age_max">
+                  <label for="age_max" class="mdc-text-field__label">Max</label>
+                </div>
+              </div>
+          </div>
+            </section>
+            </form>
+            <div>
+
+                <div id="canvas-container" style="width: 30%; height: 230px; float: left; display: inline-block;  margin-right:10%;">
+                  <canvas id="chart" width="100" height="100" responsive></canvas>
+                </div>
+              <table id="results-table" style="width:50%;">
+          <tr>
+            <th>Answer</th>
+            <th>Count</th>
+            <th>Percentage</th>
+          </tr>
+        </table>
+          </div>
+
+            <footer class="mdc-dialog__footer">
+              <button type="button" id="exit-results" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel">Exit</button>
+            </footer>
+          </div>
+      </aside>
 <script src="../js/home.js"></script>
