--- a/templates/register.html
+++ b/templates/register.html
@@ -179,7 +179,7 @@
                               <li class="mdc-list-item" role="option" id="us" tabindex="0">
                                 US
                               </li>
-                              <li class="mdc-list-item" role="option" id="uk" tabindex="0">
+                              <li class="mdc-list-item" role="option" id="gb" tabindex="0">
                                 UK
                               </li>
                               <li class="mdc-list-item" role="option" id="fr" tabindex="0">
