--- a/templates/home.html
+++ b/templates/home.html
@@ -344,7 +344,7 @@
               <br>
               <div class="mdc-form-field">
                 <div class="mdc-checkbox">
-                  <input checked id="uk" class="mdc-checkbox__native-control" type="checkbox">
+                  <input checked id="gb" class="mdc-checkbox__native-control" type="checkbox">
                   <div class="mdc-checkbox__background">
                     <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
                       <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
